# spectrafit

./: .bandit.yml  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .sonarcloud.properties  .sourcery.yaml  404.html  ARCHITECTURE_REFACTORING.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  PLUGIN_IMPLEMENTATION.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES  TODO.md  codecov.yml  cosign.pub  docker-compose.debug.yml  docker-compose.yml  fit_results_components.csv  fit_results_correlation.csv  fit_results_fit.csv  fit_results_summary.json  index.html  latest  mkdocs.yaml  mkdocs.yml  mypy.ini  objects.inv  (+12 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  pull_request_template.yaml  release-drafter.yml  release.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yaml  codespace_feature_request_form.yaml  codespaces_request_form.md  documentation_request.md  documentation_request_form.yaml  feature_request.md  feature_request_form.yaml  issue_form.yaml
.github/blocks/: all.json
.github/instructions/: architecture-refactoring-abstract-factory.instructions.md  architecture-refactoring-facade.instructions.md  doc-coding.instructions.md  general-coding.instructions.md  notebook-coding.instructions.md  python-coding.instructions.md  python-moessbauer-coding.instructions.md  release-notes-writing.instructions.md
.github/prompt/: complete-coverage.prompt.md  complete-docs.prompt.md  complete-mypy.prompt.md  complete-pytest.prompt.md  complete-ruff.prompt.md  generate-release-notes.prompt.md  refactor-abstract-factory.prompt.md  refactor-abstract-hybrid-pattern.prompt.md
.github/workflows/: codeql-analysis.yml  codeql-ci.yml  codeql.yml  conda-check.yml  conda_check.yml  dependency-review.yml  devcontainer-ci.yml  devcontainer.yaml  devcontainer.yml  docker-arm.yml  docker-cd.yml  docker-ci.yml  docker-main.yml  gitlab-mirror.yml  greetings.yml  labeler.yml  pylint.yml  python-ci.yml  python-publish.yml  release-cd.yml  release-drafter.yml  release.yml  snyk-analysis.yml  snyk-container.yml  snyk-security.yml  update-changelog.yaml  weekly-poetry-bot.yml  weekly-uv-bot.yml
.gitlab/: .gitlab-webide.yml
.trunk/: trunk.yaml
1.0.3.post2/: 404.html  index.html  sitemap.xml
Examples/: athena.nor  data.csv  example_1.json  example_1.toml  example_1.yaml  example_1_correlation.csv  example_1_errors.csv  example_1_fit.csv  example_1_summary.json  example_2.json  example_2_correlation.csv  example_2_errors.csv  example_2_fit.csv  example_2_summary.json  example_3.json  example_3_correlation.csv  example_3_errors.csv  example_3_fit.csv  example_3_summary.json  example_5.json  example_5_correlation.csv  example_5_errors.csv  example_5_fit.csv  example_5_summary.json  example_6.json  example_6_summary.json  example_7.json  example_7_correlation.csv  example_7_errors.csv  example_7_fit.csv  example_7_summary.json  example_8.json  example_8_correlation.csv  example_8_errors.csv  example_8_fit.csv  example_8_summary.json  example_8_summary.toml  fit_results.json  fit_results_correlation.csv  fit_results_errors.csv  (+7 more)
changelog/: index.html
code_of_conduct/: index.html
contact/: index.html
contributing/: index.html
contributors/: index.html
develop/: 404.html  index.html  objects.inv  sitemap.xml
docs/: changelog.md  contact.md  license.md  tags.md
includes/: abbreviations.md
latest/: 404.html  index.html
license/: index.html
search/: search_index.json
security/: index.html
spectrafit/: __init__.py  export.py  models.py  plotting.py  report.py  spectrafit.py  tools.py
tools/: analyze_coverage.py  conda_env.fish  conda_env.zsh  spectra_generator.py  spectra_gnerator.py
v0.16.6/: 404.html  index.html  objects.inv  sitemap.xml
v0.16.7/: 404.html  index.html  sitemap.xml
v0.17.0/: 404.html  index.html  sitemap.xml
v0.17.1/: 404.html  index.html  sitemap.xml
v0.17.2/: 404.html  index.html  sitemap.xml
v0.18.0/: 404.html  index.html  sitemap.xml
v0.18.1/: 404.html  index.html  sitemap.xml
v0.18.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.18.3/: 404.html  index.html  sitemap.xml
v0.19.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.20.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.20.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.21.0/: 404.html  index.html  sitemap.xml
v0.21.1/: 404.html  index.html  sitemap.xml
v0.22.0/: 404.html  index.html  sitemap.xml
v0.22.2/: 404.html  index.html  sitemap.xml
v0.22.3/: 404.html  index.html  sitemap.xml
v0.22.4/: 404.html  index.html  sitemap.xml
v0.22.5/: 404.html  index.html  sitemap.xml
v0.22.6/: 404.html  index.html  sitemap.xml
v0.22.7/: 404.html  index.html  sitemap.xml
v0.22.8/: 404.html  index.html  sitemap.xml
v0.22.9/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.0.post0/: 404.html  index.html  sitemap.xml
v1.0.0.post1/: 404.html  index.html  sitemap.xml
v1.0.0a8/: 404.html  index.html  sitemap.xml
v1.0.1/: 404.html  index.html  sitemap.xml
v1.0.2/: 404.html  index.html  sitemap.xml
v1.0.3/: 404.html  index.html  sitemap.xml
v1.0.3.post0/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.3.post1/: 404.html  index.html  sitemap.xml
v1.0.3.post2/: 404.html  index.html  sitemap.xml
v1.0.4/: 404.html  index.html  sitemap.xml
v1.0.5/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.2.0/: 404.html  index.html  sitemap.xml
v1.2.1/: 404.html  index.html  sitemap.xml
v1.2.2/: 404.html  index.html  sitemap.xml
v1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.4.0/: 404.html  index.html  sitemap.xml
v1.4.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.4.2/: 404.html  index.html  sitemap.xml  tags.json
(+2376 files in other folders)
