[project]
name = "SpectraFit"
version = "1.2.0"
description = "Fast fitting of 2D- and 3D-Spectra with established routines"
authors = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
requires-python = ">=3.8,<3.13"
readme = "README.md"
license = "BSD-3-Clause"
maintainers = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
keywords = [
  "2D-Spectra",
  "3D-Spectra",
  "fitting",
  "curve-fitting",
  "peak-fitting",
  "spectrum",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Environment :: Console",
  "Framework :: Matplotlib",
  "Framework :: Jupyter :: JupyterLab",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "lmfit>=1.2.2,<2",
  "pandas<2.2.4; python_version < '3.9'",
  "pandas>=2.2.2,<3 ; python_version >= '3.9'",
  "numpy<2; python_version < '3.9'",
  "numpy>=2.0.2,<3; python_version >= '3.9'",
  "emcee>=3.1.2,<4",
  "tabulate>=0.9.0,<0.10",
  "PyYAML~=6.0",
  "openpyxl>=3.0.9,<4",
  "seaborn>=0.13.0,<0.14",
  "numdifftools>=0.9.41,<0.10",
  "tqdm>=4.64.0,<5",
  "scikit-learn<1.6.2; python_version < '3.9'",
  "scikit-learn>=1.5.0,<2 ; python_version >= '3.9'",
  "art>=5.8,<7.0",
  "tomli>=2.0.1,<3",
  "tomli-w>=1.0.0,<2",
  "pydantic>=2.7.0,<3",
  "scipy>=1.10.1,<2 ; python_version < '3.9'",
  "scipy>=1.13.0,<2 ; python_version >= '3.9'",
]

[project.optional-dependencies]
jupyter = [
  "jupyterlab>=3.5.2,<5.0.0",
  "plotly>=5.21.0,<6",
  "itables>=2.1.1,<3",
  "kaleido==0.2.1",
  "dtale>=3.9.0,<4",
  "python-pptx>=0.6.22,<1.1.0",
]
jupyter-dash = [
  "jupyter-dash>=0.4.2,<0.5",
  "ipywidgets>=8.0.4,<9",
  "dash-bootstrap-components>=1.3.0,<2",
  "dash-bootstrap-templates",
]
graph = ["networkx>=3.0.0,<4", "pydot>=3.0.0,<4"]
all = [
  "jupyterlab>=3.5.2,<5.0.0",
  "plotly>=5.21.0,<6",
  "itables>=2.1.1,<3",
  "kaleido==0.2.1",
  "dtale>=3.9.0,<4",
  "networkx[all]~=3.0",
  "pydot>=3.0.0,<4",
  "jupyter-dash>=0.4.2,<0.5",
  "ipywidgets>=8.0.4,<9",
  "dash-bootstrap-components>=1.3.0,<2",
  "dash-bootstrap-templates",
  "python-pptx>=0.6.22,<1.1.0",
]

[project.urls]
Homepage = "https://pypi.org/project/spectrafit/"
Repository = "https://github.com/Anselmoo/spectrafit"
Documentation = "https://anselmoo.github.io/spectrafit/"
Changelog = "https://github.com/Anselmoo/spectrafit/blob/main/CHANGELOG.md"
Issues = "https://github.com/Anselmoo/spectrafit/issues"

[project.scripts]
spectrafit = "spectrafit.spectrafit:command_line_runner"
spectrafit-file-converter = "spectrafit.plugins.file_converter:command_line_runner"
spectrafit-data-converter = "spectrafit.plugins.data_converter:command_line_runner"
spectrafit-pkl-visualizer = "spectrafit.plugins.pkl_visualizer:command_line_runner"
spectrafit-pkl-converter = "spectrafit.plugins.pkl_converter:command_line_runner"
spectrafit-rixs-converter = "spectrafit.plugins.rixs_converter:command_line_runner"
spectrafit-rixs-visualizer = "spectrafit.plugins.rixs_visualizer:command_line_runner"
spectrafit-jupyter = "spectrafit.app.app:jupyter"
spectrafit-pptx-converter = "spectrafit.plugins.pptx_converter:command_line_runner"

[dependency-groups]
dev = [
  "mypy>=1.9.0,<2",
  "black[jupyter]~=24.0",
  "pre-commit<=4.1.0; python_version < '3.9'",
  "pre-commit>=4.1,<5; python_version >= '3.9'",
  "pytest>=7.1.3,<9.0.0",
  "pytest-clarity>=1.0.1,<2",
  "pytest-cov>=3,<7",
  "pytest-console-scripts>=1.3.1,<2",
  "pytest-xdist>=2.5,<4.0",
  "pytest-plt>=1.1.0,<2",
  "pytest-mock>=3.10.0,<4",
  "types-toml>=0.10.8,<0.11",
  "types-PyYAML>=6.0.11,<7",
  "types-tabulate>=0.8.11,<0.10.0",
  "types-mock>=4.0.15,<6.0.0",
  "dash[testing]>=2.7.1,<3",
  "bandit>=1.7.5,<2",
  "bump-pydantic>=0.8.0,<0.9",
  "types-setuptools>=75.8.0.20250110,<75.9.0.0",
  "ruff>=0.9.2,<0.10",
]
docs = [
  "mkdocs-material>=9.5.0,<10",
  "mkdocstrings[python]>=0.26.0,<0.28.0",
  "mkdocs-literate-nav>=0.4.1,<0.7.0",
  "mkdocs-section-index>=0.3.4,<0.4",
  "mkdocs-autorefs>=1.0.1,<2",
  "mkdocs-minify-plugin>=0.8.0,<0.9",
  "mkdocs-jupyter<=0.25.0 ; python_version < '3.9'",
  "mkdocs-jupyter>=0.25.0,<0.26 ; python_version >= '3.9'",
  "mkdocs-table-reader-plugin>=3.0.0,<4",
  "mike>=2.0.0,<3",
  "jupytext>=1.14.5,<2",
  "mathjax>=0.1.2,<0.2",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.hatch.build.targets.sdist]
include = ["spectrafit", "examples/", "spectrafit/plugins/img/SpectraFit.png"]
exclude = ["docs/", "tools/", "spectrafit/test/", "spectrafit/**/test/"]

[tool.hatch.build.targets.wheel]
include = ["spectrafit", "examples/", "spectrafit/plugins/img/SpectraFit.png"]
exclude = ["docs/", "tools/", "spectrafit/test/", "spectrafit/**/test/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
fixable = ["ALL"]
extend-ignore = ["E721", "E731"]

[tool.pytest]
script_launch_mode = "subprocess"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=./spectrafit/ --cov-report=xml:coverage.xml --diff-symbols --plots -vv"
testpaths = ["spectrafit"]

[tool.mypy]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
pretty = true
show_error_context = true
show_error_codes = true
exclude = "**/test/test_*.py"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
